# packages

./: MANIFEST.in  Makefile  README  README.rst  depends  design.xcf  install.py  main_window.ui  packages  packages.ini  packages.py  progress.py  qpackages.py  setup.cfg
qpackage/: choice.py  packages.py  qpackage  qpackages.py
