[metadata]
name = qpackage
version = 0.1
author = Gaston Tjebbes
author_email = g.tjebbes@gmail.com
summary = Easy install your preferit packages
description_file = README.rst
keywords = apt, frontend
home_page = https://github.com/tonthon/packages
project_url =
    Source repository,https://github.com/tonthon/packages
requires_dist =
    dict4ini
requires-externals =
    pyqt4-dev-tools
    python-apt
    python-setuptools
requires_python = >=2.6
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Topic :: Software Development :: Version Control

[files]
packages =
    qpackage
scripts =
    qpackage/qpackage
extra_files =
    setup.cfg
    setup.py
    README.rst
    LICENSE.txt
    MANIFEST.in
